methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:8: error: not found: value marquerSol
  marquerSol()
  ^MethodsPicture:13: error: not found: value marquerSol
  marquerSol();
  ^MethodsPicture:18: error: not found: value marquerSol
  marquerSol()
  ^