methods.picture.MethodsPicture.scala.code
override def run() {
}

def faireV(c:Color) {
  setCouleurBrosse(c:Color)
  avance();
  avance();
  marquerSol()
  gauche();
  avance();
  droite();
  avance();
  marquerSol();
  avance();
  droite();
  avance();
  gauche();
  marquerSol()
  avance();
  avance();
  gauche()
}